    to
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:reportExport")</JavaScriptAction>

. Widgets
* periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
* disableNavPath attribute to turn off navPath linkage
* New widget: "slider", based on noUiSlider implementation
* Context menu: added support for multi-context, i.e. <div contextId="is-editable is-removable"></div>

. Core
* Promise polyfill: ecma6-promise (used for IE)
* Wrs: add support for JDBC SQLXML type
* SimpleModel: add saveChain/Parameters to be able to modify save actions
* DataProvider: added support for xpath with placeholders/fill parameters for query/queryNodes/read/write/remove operations. Mainly for handling quote/apostrophe issues when dynamically building up xPath Expressions
    Example: bcdui.wkModels.guiStatus.read("//guiStatus:ClientSettings/guiStatus:Test[@caption='{{=it[0]}}' and @caption2='{{=it[1]}}']", ["china's republic", "drag\"n drop"]);

. Themes
* new pageEffect bcdEffectPageStickyFooter

. Security
* client-controlled subject filters
** the new servlet-filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter allows setting subject filters from client
** client-controlled subject filters can be set from client via bcdui.util.security API

. Server
* Updated 3rd party jars (apache commons etc) to latest versions

. Build / Dev / Docu
* In Eclipse, sub-projects Client, Server, Theme etc now have names BCD-UI--SubProjectName to keep them together in the navigation tree
* Switched to gradle 4.2, added gradle wrapper, updated nodeJs to 6.11
* Updated bcduiApiStubs.js to fit Eclipse Oxygen+Tern and IDEA 2017.2
* HTML JS API docu is now showing source names and lines

.Major bug fixes:
* I18n: local messages.xml catalog file can contain multi language enabling full i18n support w/o database

.Backward Incompatibilities: