@@ -146,7 +146,7 @@
         checkboxEl.focus();
       }
 
-      if (! this.options.disableNavPath) {
+      if (this.options.enableNavPath) {
         bcdui.widgetNg.checkbox.getNavPath(this.element.id, function(id, value) {
           bcdui.widget._linkNavPath(id, value);
         }.bind(this));
