@@ -216,7 +216,7 @@
                   jQuery(controlEl).focus();
                 }
 
-                if (! args.disableNavPath) {
+                if (args.enableNavPath) {
                   bcdui.widgetNg.singleSelect.getNavPath(args.id, function(id, value) {
                     bcdui.widget._linkNavPath(id, value);
                   }.bind(this));
