@@ -168,7 +168,7 @@
       })).done(create);
 
       // init navPath
-      if (! this.options.disableNavPath) {
+      if (this.options.enableNavPath) {
         bcdui.widgetNg.slider.getNavPath(this.options.id, function(id, value) {
           bcdui.widget._linkNavPath(id, value);
         }.bind(this));
