@@ -28,7 +28,7 @@ The Renderer either works directly with the specified element or (in case of spe
 
 . Widgets
 * periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
-* disableNavPath attribute to turn off navPath linkage
+* enableNavPath attribute to turn on/off navPath linkage (default is off (false))
 * New widget: "slider", based on noUiSlider implementation
 * Context menu: added support for multi-context, i.e. <div contextId="is-editable is-removable"></div>
 
@@ -65,6 +65,7 @@ The Renderer either works directly with the specified element or (in case of spe
 * Updated 3rd party jars (apache commons etc) to latest versions
 * Cube: for templateManager, RankingEditor or Summary, you need to include bcduiComponent in addition to bcduiCube. Symptom: _renderSummaryArea is undefined
 * Export: removed bcdui.component.exports.excel functions (detailExport, exportHTMLElement). Use bcdui.component.exports detailExport, exportWysiwygAsExcel functions.
+* Widgets: navpath generation is turned off by default, use widget's enableNavPath attribute to turn it on 
 * I18n
 ** the servlet de.businesscode.bcdui.web.i18n.I18nServlet must be registered in web.xml (and made accessible to public)
 ** the servlet filter de.businesscode.bcdui.web.filters.SubjectSettingsFilter must be registered to web.xml, right after security filter (i.e. shiro)
